Chapter05_Services/5.11-kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  # Set the service type to NodePort.
  type: NodePort
  ports:
  # This is the port of the service’s internal cluster IP.
  - port: 80
    # This is the target port of the backing pods.
    targetPort: 8080
    # The service will be accessible through port 30123 of each of your cluster nodes.
    nodePort: 30123
  selector:
    app: kubia
