Chapter05_Services/5.14-kubia-ingress-exposing-multiple-services-on-same-host-but-different-paths.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      # Requests to kubia.example.com/kubia will be routed to the kubia service.
      - path: /kubia
        backend:
          serviceName: kubia
          servicePort: 80
       # Requests to kubia.example.com/bar will be routed to the bar service.
      - path: /foo
        backend:
          serviceName: bar
          servicePort: 80
